feat: add config feature
